[tool.poetry]
name = "RoyalUr"
version = "0.0.7"
description = "An API to support the playing and analysis of games of The Royal Game of Ur."
authors = ["Padraig Lamont <padraiglamont@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
huggingface-hub = "^0.20.3"
overrides = "^7.7.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.1"
overrides = ">=7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

