[metadata]
name = RoyalUr
version = 0.0.1
author = Padraig Lamont
author_email = padraiglamont@gmail.com
url = https://github.com/RoyalUr/RoyalUr-Python
description = RoyalUr is a library to simulate games of the Royal Game of Ur.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = game, boardgame
license = MIT License
classifiers =
    Topic :: Games/Entertainment :: Board Games

[options]
zip_safe = True
include_package_data = True
packages = find:

[options.package_data]
* = README.md

[options.packages.find]
exclude =
    examples*
    docs*
