[metadata]
name = RoyalUr
version = 0.0.6
author = Padraig Lamont
author_email = padraiglamont@gmail.com
url = https://github.com/RoyalUr/RoyalUr-Python
description = An API to support the playing and analysis of games of The Royal Game of Ur.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = game, boardgame
license = MIT License
classifiers =
    Topic :: Games/Entertainment :: Board Games

[options]
zip_safe = True
include_package_data = True
install_requires =
    overrides>=7.4.0
packages = find:

[options.package_data]
* = README.md

[options.packages.find]
exclude =
    examples*
    docs*

[flake8]
per-file-ignores = __init__.py:F401,__main__.py:F401
